dec/test/corpus/defines.txt
================================================================================
File header comment block + [Defines] section (MdePkg.dec)
================================================================================

## @file  MdePkg.dec
# This Package provides all definitions, library classes and libraries instances.
#
# Copyright (c) 2007 - 2024, Intel Corporation. All rights reserved.<BR>
#
# SPDX-License-Identifier: BSD-2-Clause-Patent
#

[Defines]
  DEC_SPECIFICATION              = 0x00010005
  PACKAGE_NAME                   = MdePkg
  PACKAGE_UNI_FILE               = MdePkg.uni
  PACKAGE_GUID                   = 1E73767F-8F52-4603-AEB4-F29B510B6766
  PACKAGE_VERSION                = 1.08

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (comment)
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))))
