dec/test/corpus/guids.txt
================================================================================
[Guids] with C-array GUID literals and header-path doc comments (MdePkg.dec)
================================================================================

[Guids]
  #
  # GUID defined in UEFI2.1/UEFI2.0/EFI1.1
  #
  ## Include/Guid/GlobalVariable.h
  gEfiGlobalVariableGuid         = { 0x8BE4DF61, 0x93CA, 0x11D2, { 0xAA, 0x0D, 0x00, 0xE0, 0x98, 0x03, 0x2B, 0x8C }}

  ## Include/Guid/PcAnsi.h
  gEfiVT100PlusGuid              = { 0x7BAEC70B, 0x57E0, 0x4C76, { 0x8E, 0x87, 0x2F, 0x9E, 0x28, 0x08, 0x83, 0x43 }}

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (comment)
    (comment)
    (comment)
    (comment)
    (statement
      (field
        (bare_word))
      (field
        (array
          (field
            (bare_word))
          (field
            (bare_word))
          (field
            (bare_word))
          (field
            (array
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word)))))))
    (comment)
    (statement
      (field
        (bare_word))
      (field
        (array
          (field
            (bare_word))
          (field
            (bare_word))
          (field
            (bare_word))
          (field
            (array
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word))
              (field
                (bare_word)))))))))
