dec/test/corpus/library_classes.txt
================================================================================
[LibraryClasses] with @libraryclass doc-comment blocks (MdePkg.dec)
================================================================================

[LibraryClasses]
  ##  @libraryclass  Provides most usb APIs to support the Hid requests defined in Usb Hid 1.1 spec
  #                  and the standard requests defined in Usb 1.1 spec.
  ##
  UefiUsbLib|Include/Library/UefiUsbLib.h

  ##  @libraryclass  Provides a service to retrieve a pointer to the EFI Runtime Services Table.
  #                  Only available to DXE and UEFI module types.
  UefiRuntimeServicesTableLib|Include/Library/UefiRuntimeServicesTableLib.h

--------------------------------------------------------------------------------

(source_file
  (section
    (section_header
      (tag
        (tag_segment
          (identifier))))
    (comment)
    (comment)
    (comment)
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))
    (comment)
    (comment)
    (statement
      (field
        (bare_word))
      (field
        (bare_word)))))
